--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -1,3 +1,14 @@
-// Place all the styles related to the products controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+h1{}
+.products{
+	.product{
+		-webkit-box-shadow: 2px 16px 21px -24px rgba(0,0,0,0.75);
+		-moz-box-shadow: 2px 16px 21px -24px rgba(0,0,0,0.75);
+		box-shadow: 2px 16px 21px -24px rgba(0,0,0,0.75);
+		padding: 20px;
+		margin: 30px 0px;
+		text-align: center;
+		h3.name{}
+		p.description{}
+		p.price{}
+	}
+}
