--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,4 +7,7 @@
     = csrf_meta_tags
   %body
     .container
-      = yield
+    = render 'layouts/nav'
+    = render 'layouts/alerts'
+
+    = yield
