--- a/app/views/products/_form.html.haml
+++ b/app/views/products/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @product do |f|
+= form_for @product, html: { multipart: true } do |f|
 	.form-group
 		%h3 Name:
 		= f.text_field :name
@@ -9,5 +9,7 @@
 		%h3 Price:
 		= f.text_field :price, percision: 5, scale: 2
 	.form-group
+		=f.file_field :photo
+	.form-group
 		= f.submit
-
+ 	
