--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -5,6 +5,7 @@
 			%h3.name= p.name
 			%p.description= p.description
 			%p.price= number_to_currency(p.price, :unit => "$")
+			=image_tag p.photo.url 
 			.btn.btn-default.btn-xs= link_to 'Details', '/products/'+ p.id.to_s
 			.btn.btn-default.btn-xs= link_to 'Add to Cart', add_to_cart_url(product_id: p.id) 
 .btn.btn-default= link_to 'Add Product', products_new_url 
