--- a/app/views/shopping_cart/index.html.haml
+++ b/app/views/shopping_cart/index.html.haml
@@ -1,8 +1,12 @@
 %h1 Shopping Cart
-%table.table.items
-	-@items.each do |i|
-		%tr.item
-			%td.name= i.product.name
-			%td.quantity= i.quantity
-			%td.price= i.price
 
+- if @items
+	%table.table.items
+		-@items.each do |i|
+			%tr.item
+				%td.name= i.product.name
+				%td.quantity= i.quantity
+				%td.price= i.price
+
+- else
+	%h2 Your cart is empty
