--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -2,7 +2,8 @@
 .btn.btn-default.btn-sm=link_to 'Edit', edit_product_url 
 .btn.btn-default.btn-sm=link_to 'Delete', @product, confirm: 'Are you sure?', method: :delete
 
-%h2.name= @product.name       
+%h2.name= @product.name
+=image_tag @product.photo      
 %p.description= @product.description
 %p.price= @product.price      
 
