--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -4,11 +4,28 @@ h1{}
 		-webkit-box-shadow: 2px 16px 21px -24px rgba(0,0,0,0.75);
 		-moz-box-shadow: 2px 16px 21px -24px rgba(0,0,0,0.75);
 		box-shadow: 2px 16px 21px -24px rgba(0,0,0,0.75);
+		border: 1px solid #e4e4e4;
 		padding: 20px;
 		margin: 30px 0px;
 		text-align: center;
-		h3.name{}
-		p.description{}
-		p.price{}
+		font-family: 'Open Sans', sans-serif;
+		
+		h3.name{
+			a:hover{text-decoration: none;}
+			
+		}
+		p.description{
+			color: #999999;
+			font-family: 'Noto Sans', sans-serif;
+		}
+		p.price{
+			font-size: 1.25em;
+			color: #FF7228
+		}
+		.buy-btn{
+			background-color: #FFA318 !important;
+			color:#333;
+			font-weight: bold;
+		}
 	}
 }
