--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -1,12 +1,12 @@
 %h1 Products
 .products.row
 	- @products.each do |p|
+
 		.product.col-xs-6.col-sm-4.col-md-3
-			%h3.name= p.name
-			%p.description= p.description
+			= link_to image_tag(p.photo.url(:thumb)), product_url(p)				 
+			%h3.name= link_to truncate(p.name, length: 20), product_url(p) 
+			%p.description= truncate p.description, length: 100
 			%p.price= number_to_currency(p.price, :unit => "$")
-			=image_tag p.photo.url :thumb 
-			.btn.btn-default.btn-xs= link_to 'Details', '/products/'+ p.id.to_s
-			.btn.btn-default.btn-xs= link_to 'Add to Cart', add_to_cart_url(product_id: p.id) 
-.btn.btn-default= link_to 'Add Product', products_new_url 
+			= link_to 'BUY', add_to_cart_url(product_id: p.id), class: 'btn btn-md buy-btn' 
+
 
