--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -1,10 +1,8 @@
 %h1 Product Detail
-.btn.btn-default.btn-sm=link_to 'Edit', edit_product_url 
-.btn.btn-default.btn-sm=link_to 'Delete', @product, confirm: 'Are you sure?', method: :delete
+=link_to 'Edit', edit_product_url, class: 'btn btn-primary' if session[:current_user_id]
+=link_to 'Delete', @product, confirm: 'Are you sure?', method: :delete, class: 'btn btn-primary' if session[:current_user_id]
 
 %h2.name= @product.name
 =image_tag @product.photo      
 %p.description= @product.description
 %p.price= @product.price      
-
-=link_to 'All Products', products_url 
