--- a/app/views/shopping_cart/index.html.haml
+++ b/app/views/shopping_cart/index.html.haml
@@ -7,6 +7,6 @@
 				%td.name= i.product.name
 				%td.quantity= i.quantity
 				%td.price= i.price
-
+	=link_to 'Checkout', checkout_url, class: 'btn btn-primary'
 - else
 	%h2 Your cart is empty
