--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -1,31 +1,41 @@
 h1{}
-.products{
+
+.product{
+		
+		text-align: center;
+		font-family: 'Open Sans', sans-serif;
+		
+		.name{
+			a:hover{ text-decoration: none; }
+		}
+		.description{
+			color: #999999;
+			font-family: 'Noto Sans', sans-serif;
+		}
+		.price{
+			font-size: 1.25em;
+			color: #FF7228
+		}
+	}
+.buy-btn{
+			background-color: #FFA318 !important;
+			color:#333;
+			font-weight: bold;
+		}
+#index{
 	.product{
 		-webkit-box-shadow: 2px 16px 21px -24px rgba(0,0,0,0.75);
 		-moz-box-shadow: 2px 16px 21px -24px rgba(0,0,0,0.75);
 		box-shadow: 2px 16px 21px -24px rgba(0,0,0,0.75);
 		border: 1px solid #e4e4e4;
 		padding: 20px;
-		margin: 30px 0px;
-		text-align: center;
-		font-family: 'Open Sans', sans-serif;
-		
-		h3.name{
-			a:hover{text-decoration: none;}
-			
-		}
-		p.description{
-			color: #999999;
-			font-family: 'Noto Sans', sans-serif;
-		}
-		p.price{
-			font-size: 1.25em;
-			color: #FF7228
-		}
-		.buy-btn{
-			background-color: #FFA318 !important;
-			color:#333;
-			font-weight: bold;
-		}
+		margin: 3px;
 	}
+}
+#show{	
+	.price{
+		font-size: 1.5em;
+		color: #FF7228;
+	}
+
 }
