--- a/app/views/layouts/_nav.html.haml
+++ b/app/views/layouts/_nav.html.haml
@@ -6,41 +6,43 @@
         %span.icon-bar
         %span.icon-bar
         %span.icon-bar
-      %a.navbar-brand{:href => "#"} Brand
+      %a.navbar-brand{:href => "#"} Suuq
     #bs-example-navbar-collapse-1.collapse.navbar-collapse
       %ul.nav.navbar-nav
         %li.active
-          =link_to products_url, class: 'btn btn-primary' do
-            Products
-            %span.sr-only (current)
-        %li
-          %a{:href => "#"} Link
-        %li.dropdown
-          %a.dropdown-toggle{"aria-expanded" => "false", "data-toggle" => "dropdown", :href => "#", :role => "button"}
-            Dropdown
-            %span.caret
-          %ul.dropdown-menu{:role => "menu"}
-            %li
-              %a{:href => "#"} Action
-            %li
-              %a{:href => "#"} Another action
-            %li
-              %a{:href => "#"} Something else here
-            %li.divider
-            %li
-              %a{:href => "#"} Separated link
-            %li.divider
-            %li
-              %a{:href => "#"} One more separated link
-      %form.navbar-form.navbar-left{:role => "search"}
-        .form-group
-          %input.form-control{:placeholder => "Search", :type => "text"}/
-        %button.btn.btn-default{:type => "submit"} Submit
+          =link_to products_url do
+            %span.glyphicon.glyphicon-home
+      /   %li
+      /     %a{:href => "#"} Link
+      /   %li.dropdown
+      /     %a.dropdown-toggle{"aria-expanded" => "false", "data-toggle" => "dropdown", :href => "#", :role => "button"}
+      /       Dropdown
+      /       %span.caret
+      /     %ul.dropdown-menu{:role => "menu"}
+      /       %li
+      /         %a{:href => "#"} Action
+      /       %li
+      /         %a{:href => "#"} Another action
+      /       %li
+      /         %a{:href => "#"} Something else here
+      /       %li.divider
+      /       %li
+      /         %a{:href => "#"} Separated link
+      /       %li.divider
+      /       %li
+      /         %a{:href => "#"} One more separated link
+      / %form.navbar-form.navbar-left{:role => "search"}
+      /   .form-group
+      /     %input.form-control{:placeholder => "Search", :type => "text"}/
+      /   %button.btn.btn-default{:type => "submit"} Submit
       %ul.nav.navbar-nav.navbar-right
+        - if admin?
+          %li  
+            =link_to products_new_url do
+              %span.glyphicon.glyphicon-plus
         %li
-          =link_to 'Add Product', products_new_url if session[:current_user_id]
+          =link_to shopping_cart_url do
+            %span.glyphicon.glyphicon-shopping-cart
         %li
-          =link_to 'Shopping Cart', shopping_cart_url
-        %li
-          =link_to 'Sign In', signin_url unless session[:current_user_id]
-          =link_to( 'Logout', signout_url, {method: :delete} ) if session[:current_user_id]
+          =link_to 'Sign In', signin_url unless current_user
+          =link_to( 'Logout', signout_url, {method: :delete} ) if current_user
