--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,9 +6,8 @@
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
-  %body
-    .container
+  %body{id: "#{action_name}"}
     = render 'layouts/nav'
     = render 'layouts/alerts'
-
-    = yield
+    .container
+      = yield
