--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -1,12 +1,12 @@
-%h1 Products
+
 .products.row
 	- @products.each do |p|
-
-		.product.col-xs-6.col-sm-4.col-md-3
-			= link_to image_tag(p.photo.url(:thumb)), product_url(p)				 
-			%h3.name= link_to truncate(p.name, length: 20), product_url(p) 
-			%p.description= truncate p.description, length: 100
-			%p.price= number_to_currency(p.price, :unit => "$")
-			= link_to 'BUY', add_to_cart_url(product_id: p.id), class: 'btn btn-md buy-btn' 
+		.col-xs-6.col-sm-4.col-md-3
+			.product
+				= link_to image_tag(p.photo.url(:thumb)), product_url(p)				 
+				%h3.name= link_to truncate(p.name, length: 15), product_url(p) 
+				%p.description= truncate p.description, length: 75
+				%p.price= number_to_currency(p.price, :unit => "$")
+				= link_to 'BUY', add_to_cart_url(product_id: p.id), class: 'btn btn-md buy-btn' 
 
 
