--- a/app/assets/stylesheets/orders.scss
+++ b/app/assets/stylesheets/orders.scss
@@ -1,3 +1,28 @@
 // Place all the styles related to the orders controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.orders{
+  .order{
+  	border: 1px solid #ccc;
+    font-size: 1em;
+    margin: 20px 0;
+	
+		.labels{
+  		/*margin: 20px 1px;*/
+  		font-size: .8em;
+  		padding: 20px 0;
+  		text-transform: uppercase;
+  		background-color: #F5F3F1;
+  	}
+  	.detail{
+  		.id{font-size: 1.5em;}
+	    .date{}
+	    .status{font-weight: bold;}
+	    .total{font-size: 1.5em;}
+
+  	}
+    
+	}
+}
